PLDCOMPParser.cpp

// Generated from PLDCOMP.g4 by ANTLR 4.7.1


#include "PLDCOMPListener.h"
#include "PLDCOMPVisitor.h"

#include "PLDCOMPParser.h"


using namespace antlrcpp;
using namespace antlr4;

PLDCOMPParser::PLDCOMPParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

PLDCOMPParser::~PLDCOMPParser() {
  delete _interpreter;
}

std::string PLDCOMPParser::getGrammarFileName() const {
  return "PLDCOMP.g4";
}

const std::vector<std::string>& PLDCOMPParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& PLDCOMPParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- OpContext ------------------------------------------------------------------

PLDCOMPParser::OpContext::OpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PLDCOMPParser::OpContext::getRuleIndex() const {
  return PLDCOMPParser::RuleOp;
}

void PLDCOMPParser::OpContext::copyFrom(OpContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AddContext ------------------------------------------------------------------

PLDCOMPParser::AddContext::AddContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::AddContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAdd(this);
}
void PLDCOMPParser::AddContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAdd(this);
}

antlrcpp::Any PLDCOMPParser::AddContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitAdd(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InfContext ------------------------------------------------------------------

PLDCOMPParser::InfContext::InfContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::InfContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInf(this);
}
void PLDCOMPParser::InfContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInf(this);
}

antlrcpp::Any PLDCOMPParser::InfContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitInf(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MultContext ------------------------------------------------------------------

PLDCOMPParser::MultContext::MultContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::MultContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMult(this);
}
void PLDCOMPParser::MultContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMult(this);
}

antlrcpp::Any PLDCOMPParser::MultContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitMult(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ModContext ------------------------------------------------------------------

PLDCOMPParser::ModContext::ModContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::ModContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMod(this);
}
void PLDCOMPParser::ModContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMod(this);
}

antlrcpp::Any PLDCOMPParser::ModContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitMod(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OrContext ------------------------------------------------------------------

PLDCOMPParser::OrContext::OrContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::OrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOr(this);
}
void PLDCOMPParser::OrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOr(this);
}

antlrcpp::Any PLDCOMPParser::OrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitOr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InfsContext ------------------------------------------------------------------

PLDCOMPParser::InfsContext::InfsContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::InfsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInfs(this);
}
void PLDCOMPParser::InfsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInfs(this);
}

antlrcpp::Any PLDCOMPParser::InfsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitInfs(this);
  else
    return visitor->visitChildren(this);
}
//----------------- EqualbContext ------------------------------------------------------------------

PLDCOMPParser::EqualbContext::EqualbContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::EqualbContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEqualb(this);
}
void PLDCOMPParser::EqualbContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEqualb(this);
}

antlrcpp::Any PLDCOMPParser::EqualbContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitEqualb(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AndbContext ------------------------------------------------------------------

PLDCOMPParser::AndbContext::AndbContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::AndbContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAndb(this);
}
void PLDCOMPParser::AndbContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAndb(this);
}

antlrcpp::Any PLDCOMPParser::AndbContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitAndb(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DiffContext ------------------------------------------------------------------

PLDCOMPParser::DiffContext::DiffContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::DiffContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDiff(this);
}
void PLDCOMPParser::DiffContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDiff(this);
}

antlrcpp::Any PLDCOMPParser::DiffContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitDiff(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DecgContext ------------------------------------------------------------------

PLDCOMPParser::DecgContext::DecgContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::DecgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecg(this);
}
void PLDCOMPParser::DecgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecg(this);
}

antlrcpp::Any PLDCOMPParser::DecgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitDecg(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DecdContext ------------------------------------------------------------------

PLDCOMPParser::DecdContext::DecdContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::DecdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecd(this);
}
void PLDCOMPParser::DecdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecd(this);
}

antlrcpp::Any PLDCOMPParser::DecdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitDecd(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SupContext ------------------------------------------------------------------

PLDCOMPParser::SupContext::SupContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::SupContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSup(this);
}
void PLDCOMPParser::SupContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSup(this);
}

antlrcpp::Any PLDCOMPParser::SupContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitSup(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DivContext ------------------------------------------------------------------

PLDCOMPParser::DivContext::DivContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::DivContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDiv(this);
}
void PLDCOMPParser::DivContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDiv(this);
}

antlrcpp::Any PLDCOMPParser::DivContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitDiv(this);
  else
    return visitor->visitChildren(this);
}
//----------------- EqualContext ------------------------------------------------------------------

PLDCOMPParser::EqualContext::EqualContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::EqualContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEqual(this);
}
void PLDCOMPParser::EqualContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEqual(this);
}

antlrcpp::Any PLDCOMPParser::EqualContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitEqual(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SupsContext ------------------------------------------------------------------

PLDCOMPParser::SupsContext::SupsContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::SupsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSups(this);
}
void PLDCOMPParser::SupsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSups(this);
}

antlrcpp::Any PLDCOMPParser::SupsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitSups(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AndContext ------------------------------------------------------------------

PLDCOMPParser::AndContext::AndContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::AndContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAnd(this);
}
void PLDCOMPParser::AndContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAnd(this);
}

antlrcpp::Any PLDCOMPParser::AndContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitAnd(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MoinsContext ------------------------------------------------------------------

PLDCOMPParser::MoinsContext::MoinsContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::MoinsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMoins(this);
}
void PLDCOMPParser::MoinsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMoins(this);
}

antlrcpp::Any PLDCOMPParser::MoinsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitMoins(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PowContext ------------------------------------------------------------------

PLDCOMPParser::PowContext::PowContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::PowContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPow(this);
}
void PLDCOMPParser::PowContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPow(this);
}

antlrcpp::Any PLDCOMPParser::PowContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitPow(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OrbContext ------------------------------------------------------------------

PLDCOMPParser::OrbContext::OrbContext(OpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::OrbContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOrb(this);
}
void PLDCOMPParser::OrbContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOrb(this);
}

antlrcpp::Any PLDCOMPParser::OrbContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitOrb(this);
  else
    return visitor->visitChildren(this);
}
PLDCOMPParser::OpContext* PLDCOMPParser::op() {
  OpContext *_localctx = _tracker.createInstance<OpContext>(_ctx, getState());
  enterRule(_localctx, 0, PLDCOMPParser::RuleOp);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(53);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PLDCOMPParser::T__0: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::AddContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(34);
        match(PLDCOMPParser::T__0);
        break;
      }

      case PLDCOMPParser::T__1: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::MoinsContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(35);
        match(PLDCOMPParser::T__1);
        break;
      }

      case PLDCOMPParser::T__2: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::MultContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(36);
        match(PLDCOMPParser::T__2);
        break;
      }

      case PLDCOMPParser::T__3: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::DivContext>(_localctx));
        enterOuterAlt(_localctx, 4);
        setState(37);
        match(PLDCOMPParser::T__3);
        break;
      }

      case PLDCOMPParser::T__4: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::ModContext>(_localctx));
        enterOuterAlt(_localctx, 5);
        setState(38);
        match(PLDCOMPParser::T__4);
        break;
      }

      case PLDCOMPParser::T__5: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::PowContext>(_localctx));
        enterOuterAlt(_localctx, 6);
        setState(39);
        match(PLDCOMPParser::T__5);
        break;
      }

      case PLDCOMPParser::T__6: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::AndContext>(_localctx));
        enterOuterAlt(_localctx, 7);
        setState(40);
        match(PLDCOMPParser::T__6);
        break;
      }

      case PLDCOMPParser::T__7: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::OrContext>(_localctx));
        enterOuterAlt(_localctx, 8);
        setState(41);
        match(PLDCOMPParser::T__7);
        break;
      }

      case PLDCOMPParser::T__8: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::EqualContext>(_localctx));
        enterOuterAlt(_localctx, 9);
        setState(42);
        match(PLDCOMPParser::T__8);
        break;
      }

      case PLDCOMPParser::T__9: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::InfsContext>(_localctx));
        enterOuterAlt(_localctx, 10);
        setState(43);
        match(PLDCOMPParser::T__9);
        break;
      }

      case PLDCOMPParser::T__10: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::InfContext>(_localctx));
        enterOuterAlt(_localctx, 11);
        setState(44);
        match(PLDCOMPParser::T__10);
        break;
      }

      case PLDCOMPParser::T__11: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::SupsContext>(_localctx));
        enterOuterAlt(_localctx, 12);
        setState(45);
        match(PLDCOMPParser::T__11);
        break;
      }

      case PLDCOMPParser::T__12: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::SupContext>(_localctx));
        enterOuterAlt(_localctx, 13);
        setState(46);
        match(PLDCOMPParser::T__12);
        break;
      }

      case PLDCOMPParser::T__13: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::DecgContext>(_localctx));
        enterOuterAlt(_localctx, 14);
        setState(47);
        match(PLDCOMPParser::T__13);
        break;
      }

      case PLDCOMPParser::T__14: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::DecdContext>(_localctx));
        enterOuterAlt(_localctx, 15);
        setState(48);
        match(PLDCOMPParser::T__14);
        break;
      }

      case PLDCOMPParser::T__15: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::EqualbContext>(_localctx));
        enterOuterAlt(_localctx, 16);
        setState(49);
        match(PLDCOMPParser::T__15);
        break;
      }

      case PLDCOMPParser::T__16: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::DiffContext>(_localctx));
        enterOuterAlt(_localctx, 17);
        setState(50);
        match(PLDCOMPParser::T__16);
        break;
      }

      case PLDCOMPParser::T__17: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::AndbContext>(_localctx));
        enterOuterAlt(_localctx, 18);
        setState(51);
        match(PLDCOMPParser::T__17);
        break;
      }

      case PLDCOMPParser::T__18: {
        _localctx = dynamic_cast<OpContext *>(_tracker.createInstance<PLDCOMPParser::OrbContext>(_localctx));
        enterOuterAlt(_localctx, 19);
        setState(52);
        match(PLDCOMPParser::T__18);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpContext ------------------------------------------------------------------

PLDCOMPParser::ExpContext::ExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PLDCOMPParser::ExpContext::getRuleIndex() const {
  return PLDCOMPParser::RuleExp;
}

void PLDCOMPParser::ExpContext::copyFrom(ExpContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExpLvalueContext ------------------------------------------------------------------

PLDCOMPParser::LvalueContext* PLDCOMPParser::ExpLvalueContext::lvalue() {
  return getRuleContext<PLDCOMPParser::LvalueContext>(0);
}

PLDCOMPParser::ExpLvalueContext::ExpLvalueContext(ExpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::ExpLvalueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpLvalue(this);
}
void PLDCOMPParser::ExpLvalueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpLvalue(this);
}

antlrcpp::Any PLDCOMPParser::ExpLvalueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitExpLvalue(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PpexpContext ------------------------------------------------------------------

PLDCOMPParser::LvalueContext* PLDCOMPParser::PpexpContext::lvalue() {
  return getRuleContext<PLDCOMPParser::LvalueContext>(0);
}

PLDCOMPParser::PpexpContext::PpexpContext(ExpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::PpexpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPpexp(this);
}
void PLDCOMPParser::PpexpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPpexp(this);
}

antlrcpp::Any PLDCOMPParser::PpexpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitPpexp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AppelGetcharContext ------------------------------------------------------------------

PLDCOMPParser::AppelGetcharContext::AppelGetcharContext(ExpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::AppelGetcharContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAppelGetchar(this);
}
void PLDCOMPParser::AppelGetcharContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAppelGetchar(this);
}

antlrcpp::Any PLDCOMPParser::AppelGetcharContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitAppelGetchar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstanteNombreContext ------------------------------------------------------------------

tree::TerminalNode* PLDCOMPParser::ConstanteNombreContext::NOMBRE() {
  return getToken(PLDCOMPParser::NOMBRE, 0);
}

PLDCOMPParser::ConstanteNombreContext::ConstanteNombreContext(ExpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::ConstanteNombreContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstanteNombre(this);
}
void PLDCOMPParser::ConstanteNombreContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstanteNombre(this);
}

antlrcpp::Any PLDCOMPParser::ConstanteNombreContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitConstanteNombre(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParentheseContext ------------------------------------------------------------------

PLDCOMPParser::ExpContext* PLDCOMPParser::ParentheseContext::exp() {
  return getRuleContext<PLDCOMPParser::ExpContext>(0);
}

PLDCOMPParser::ParentheseContext::ParentheseContext(ExpContext *ctx) { copyFrom(ctx); }

void PLDCOMPParser::ParentheseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParenthese(this);
}
void PLDCOMPParser::ParentheseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PLDCOMPListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParenthese(this);
}

antlrcpp::Any PLDCOMPParser::ParentheseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PLDCOMPVisitor*>(visitor))
    return parserVisitor->visitParenthese(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NonContext ------------------------------------------------------------------

PLDCOMPParser::ExpContext* PLDCOMPParser::NonContext::exp() {
  return getRuleContext<PLDCOMPParser::ExpContext>(0);
}

PLDCOMPParser::NonContext::NonContext(ExpContext *ctx) { copyFrom(ctx); }
